<!--
  Copyright 2015 Google Inc. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<!-- TODO(g-ortuno): Remove FragmentLayout since it's not necessary -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ktm.sialaa.blecommunication.BatteryServiceFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10sp">

        <TextView
            android:id="@+id/textView_serviceName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/remoteControlServiceName"
            android:textAppearance="@style/subheader" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_serviceName"
            android:text="@string/navigation_on_off"
            android:id="@+id/navigationStateSwitch"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/navigationStateSwitch"
            android:text="@string/gps_icon"
            android:id="@+id/gpsIconSwitch"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gpsIconSwitch"
            android:hint="@string/turn_icon"
            android:id="@+id/turnIconEditText"
            android:inputType="number"

            android:text="21"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/turnIconEditText"
            android:hint="@string/turn_distance"
            android:id="@+id/turnDistanceEditText"
            android:inputType="text"

            android:text="12 km"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/turnDistanceEditText"
            android:hint="@string/turn_info"
            android:id="@+id/turnInfoEditText"
            android:inputType="text"

            android:text="1. Ausfahrt"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/turnInfoEditText"
            android:hint="@string/turn_road"
            android:id="@+id/turnRoadEditText"
            android:inputType="text"

            android:text="Krenastraße"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/turnRoadEditText"
            android:hint="@string/est_arrival_time"
            android:id="@+id/estArrivalTimeEditText"
            android:inputType="text"

            android:text="12:32 am"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/estArrivalTimeEditText"
            android:hint="@string/distance_to_destination"
            android:id="@+id/dist2DestEditText"
            android:inputType="text"

            android:text="150,5 km"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dist2DestEditText"
            android:id="@+id/notificationLayout"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distance_to_destination"
                android:id="@+id/notificationEditText"
                android:inputType="text"
                android:layout_weight="1"

                android:text="recalculating"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/notificationSpinner"
                android:entries="@array/notification_icons"/>

        </LinearLayout>


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/navigationCommandSpinner"
            android:layout_below="@id/notificationLayout"
            android:entries="@array/navigation_commands"></Spinner>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_service_characteristics"
            android:layout_alignParentBottom="true"
            android:id="@+id/updateServiceBtn"/>

    </RelativeLayout>

</FrameLayout>
